# oxi8

./: .gitignore  Cargo.toml  build.sh
oxi8_cpu/: Cargo.toml
oxi8_cpu/src/: lib.rs
oxi8_kiss3d/: Cargo.toml
oxi8_kiss3d/src/: main.rs
oxi8_kiss3d/static/: index.html
oxi8_quicksilver/: Cargo.toml
oxi8_quicksilver/src/: main.rs
oxi8_quicksilver/static/: index.html
resources/CHIP8/: CHIP8.INI  COSMAC.VIP  FILE_ID.DIZ  SCHIP48.GX  SVGA256.BGI
resources/CHIP8/DOCS/: FAQ.TXT  WHATSNEW.TXT
resources/Octo/examples/: mirror  sort1  sort2  sort3  sort4  stack1  stack2  stack3  testbigfont  testbranch  testcompare  testloop  testnext  testquirks  testunpack  verticalclip  waitkey  xomusicplayer
