[package]
name    = "oxi8_kiss3d"
version = "0.0.1"
authors = ["moparisthebest <admin@moparisthebest.com>"]

description = "native and webasm CHIP-8 emulator in Rust."
repository  = "https://code.moparisthebest.com/moparisthebest/oxi8"
keywords = [ "chip8", "chip-8", "emulation", "emulator" ]

license = "AGPL-3.0+"
readme = "README.md"

edition = "2018"

include = [
    "**/*.rs",
    "Cargo.toml",
    "*.md",
]

[dependencies]
oxi8_cpu = { version = "0.0.1", path = "../oxi8_cpu" }
nalgebra     = "0.18"
kiss3d       = "0.20.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4"
rand = { version = "0.6", features = ["stdweb"] }
