[package]
name    = "oxi8_quicksilver"
version = "0.0.1"
authors = ["moparisthebest <admin@moparisthebest.com>"]

description = "native and webasm CHIP-8 emulator in Rust."
repository  = "https://code.moparisthebest.com/moparisthebest/oxi8"
keywords = [ "chip8", "chip-8", "emulation", "emulator" ]

license = "AGPL-3.0+"
readme = "README.md"

edition = "2018"

include = [
    "**/*.rs",
    "Cargo.toml",
    "*.md",
]

[dependencies]
oxi8_cpu = { version = "0.0.1", path = "../oxi8_cpu" }
quicksilver = { version = "0.3", default-features = false, features = [] } # we don't need any features now, we will need "sounds" soon

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.6"
die = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4"
rand = { version = "0.6", features = ["stdweb"] }
base64 = "0.10"
